added api to get the max scorer in each game, queried by level
