# src/main/java/com/bs/codetest/api/controller/credits/GamersCreditsApiController.java
@@ -2,9 +2,7 @@ package com.bs.codetest.api.controller.credits;
 
 import com.bs.codetest.api.ManageGamersCreditsApi;
 import com.bs.codetest.api.model.GamersCredits;
-import com.bs.codetest.api.model.GamersInfo;
 import com.bs.codetest.api.service.credits.GamersCreditsService;
-import com.bs.codetest.api.service.gamers.GamersService;
 import com.bs.codetest.api.util.ResponseHandler;
 import com.bs.codetest.api.util.ValidationUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,6 +12,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import java.util.List;
 import java.util.Optional;
 
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-11-07T21:08:36.685439100+05:30[Asia/Calcutta]")
@@ -43,5 +42,13 @@ public class GamersCreditsApiController implements ManageGamersCreditsApi {
         GamersCredits gamersCreditsResponse = gamersCreditsService.processEntity(gamersCredits, "GAMERS_CREDIT");
         //todo: add to constants
         return ResponseHandler.generateResponse("Successfully added a gamer!", HttpStatus.CREATED, gamersCreditsResponse);
+    }
+
+    @Override
+    public ResponseEntity<List<GamersCredits>> getCredits(String levelId, Integer gameId) {
+        //todo: implemet validations
+        //ValidationUtils.validateGamersCreditsRequest(gamersCredits);
+        Optional<List<GamersCredits>> gamersCreditsResponse = gamersCreditsService.getGamersMaxCreditByLevel(levelId, gameId);
+        return new ResponseEntity<List<GamersCredits>>(gamersCreditsResponse.get(), HttpStatus.OK);
     }
 }
