# src/main/java/com/bs/codetest/api/util/ResponseHandler.java
@@ -1,9 +1,11 @@
 package com.bs.codetest.api.util;
 
+import com.bs.codetest.api.model.GamersCredits;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class ResponseHandler {
@@ -12,6 +14,15 @@ public class ResponseHandler {
         map.put("message", message);
         map.put("status", status.value());
         map.put("data", responseObj);
+
+        return new ResponseEntity<Object>(map,status);
+    }
+
+    public static ResponseEntity<Object> generateResponseList(String message, HttpStatus status, List<Object> responseList) {
+        Map<String, Object> map = new HashMap<String, Object>();
+        map.put("message", message);
+        map.put("status", status.value());
+        map.put("data", responseList);
 
         return new ResponseEntity<Object>(map,status);
     }
